force-app/main/default/objects/RT1__ReadyTalkMeetingMember__c/RT1__ReadyTalkMeetingMember__c.object-meta.xml
<CustomObject>
    <label>ReadyTalk Meeting Member</label>
    <nameField>
        <label>Meeting Member Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ReadyTalk Meeting Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>