force-app/main/default/objects/RT1__ReadyTalkMeetingMember__c/fields/RT1__Email__c.field-meta.xml
<CustomField>
    <fullName>RT1__Email__c</fullName>
    <description>Lead or Contact Email</description>
    <formula>IF(NOT(ISBLANK(RT1__Contact__c)), RT1__Contact__r.Email, IF(NOT(ISBLANK(RT1__Lead__r.Email)), RT1__Lead__r.Email,  RT1__RegistrationEmail__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead/Contact Email</label>
    <type>Text</type>
</CustomField>