force-app/main/default/objects/RT1__ReadyTalkMeetingMember__c/fields/RT1__Lead__c.field-meta.xml
<CustomField>
    <fullName>RT1__Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Lead in Salesforce CRM that is related to the ReadyTalk Meeting Member.</description>
    <inlineHelpText>The Lead that is related to the ReadyTalk Meeting Member.</inlineHelpText>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>ReadyTalk Meeting History</relationshipLabel>
    <relationshipName>ReadyTalk_Meeting_Members</relationshipName>
    <type>Lookup</type>
</CustomField>