force-app/main/default/objects/RT1__ReadyTalkMeetingMember__c/fields/RT1__Meeting_Status__c.field-meta.xml
<CustomField>
    <fullName>RT1__Meeting_Status__c</fullName>
    <formula>TEXT(RT1__ReadyTalkMeeting__r.RT1__CCMeetingStatus__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Meeting Status</label>
    <type>Text</type>
</CustomField>