force-app/main/default/objects/RT1__ReadyTalkMeetingMember__c/fields/RT1__MeetingName__c.field-meta.xml
<CustomField>
    <fullName>RT1__MeetingName__c</fullName>
    <formula>RT1__ReadyTalkMeeting__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Meeting Name</label>
    <type>Text</type>
</CustomField>