force-app/main/default/objects/RT1__ReadyTalkMeetingMember__c/fields/RT1__Poll_Answer4__c.field-meta.xml
<CustomField>
    <fullName>RT1__Poll_Answer4__c</fullName>
    <label>Poll Answer 4</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>