force-app/main/default/objects/RT1__ReadyTalkMeetingMember__c/fields/RT1__Poll_Question3__c.field-meta.xml
<CustomField>
    <fullName>RT1__Poll_Question3__c</fullName>
    <label>Poll Question 3</label>
    <type>TextArea</type>
</CustomField>