force-app/main/default/objects/RT1__ReadyTalkMeetingMember__c/fields/RT1__Poll_Question5__c.field-meta.xml
<CustomField>
    <fullName>RT1__Poll_Question5__c</fullName>
    <label>Poll Question 5</label>
    <type>TextArea</type>
</CustomField>