force-app/main/default/objects/RT1__ReadyTalkMeetingMember__c/fields/RT1__PostSurvey_Answer2__c.field-meta.xml
<CustomField>
    <fullName>RT1__PostSurvey_Answer2__c</fullName>
    <label>Post Event Survey Answer 2</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>