force-app/main/default/objects/RT1__ReadyTalkMeetingMember__c/fields/RT1__PostSurvey_Question3__c.field-meta.xml
<CustomField>
    <fullName>RT1__PostSurvey_Question3__c</fullName>
    <label>Post Event Survey Question 3</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>