force-app/main/default/objects/RT1__ReadyTalkMeetingMember__c/fields/RT1__RegistrationAddress2__c.field-meta.xml
<CustomField>
    <fullName>RT1__RegistrationAddress2__c</fullName>
    <description>ReadyTalk Registration Address 2</description>
    <label>Address 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>