force-app/main/default/objects/RT1__ReadyTalkMeetingMember__c/fields/RT1__RegistrationAnnualRevenue__c.field-meta.xml
<CustomField>
    <fullName>RT1__RegistrationAnnualRevenue__c</fullName>
    <description>ReadyTalk Registration Annual Revenue</description>
    <label>Annual Revenue</label>
    <length>255</length>
    <type>Text</type>
</CustomField>