force-app/main/default/objects/RT1__ReadyTalkMeetingMember__c/fields/RT1__RegistrationAnswer1__c.field-meta.xml
<CustomField>
    <fullName>RT1__RegistrationAnswer1__c</fullName>
    <description>ReadyTalk Custom Registration Answer 1</description>
    <label>Custom Answer 1</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>