force-app/main/default/objects/RT1__ReadyTalkMeetingMember__c/fields/RT1__RegistrationAnswer2__c.field-meta.xml
<CustomField>
    <fullName>RT1__RegistrationAnswer2__c</fullName>
    <description>ReadyTalk Custom Registration Answer 2</description>
    <label>Custom Answer 2</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>