force-app/main/default/objects/RT1__ReadyTalkMeetingMember__c/fields/RT1__RegistrationCompany__c.field-meta.xml
<CustomField>
    <fullName>RT1__RegistrationCompany__c</fullName>
    <description>ReadyTalk Registration Company</description>
    <label>Company</label>
    <length>255</length>
    <type>Text</type>
</CustomField>