force-app/main/default/objects/RT1__ReadyTalkMeetingMember__c/fields/RT1__RegistrationCountry__c.field-meta.xml
<CustomField>
    <fullName>RT1__RegistrationCountry__c</fullName>
    <description>ReadyTalk Registration Country</description>
    <label>Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>