force-app/main/default/objects/RT1__ReadyTalkMeetingMember__c/fields/RT1__RegistrationDepartment__c.field-meta.xml
<CustomField>
    <fullName>RT1__RegistrationDepartment__c</fullName>
    <description>ReadyTalk Registration Department</description>
    <label>Department</label>
    <length>255</length>
    <type>Text</type>
</CustomField>