force-app/main/default/objects/RT1__ReadyTalkMeetingMember__c/fields/RT1__RegistrationFax__c.field-meta.xml
<CustomField>
    <fullName>RT1__RegistrationFax__c</fullName>
    <description>ReadyTalk Registration Fax Number</description>
    <label>Fax</label>
    <length>255</length>
    <type>Text</type>
</CustomField>