force-app/main/default/objects/RT1__ReadyTalkMeetingMember__c/fields/RT1__RegistrationName__c.field-meta.xml
<CustomField>
    <fullName>RT1__RegistrationName__c</fullName>
    <formula>RT1__RegistrationFirstName__c &amp; &quot; &quot; &amp;  RT1__RegistrationLastName__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Registration Name</label>
    <type>Text</type>
</CustomField>