force-app/main/default/objects/RT1__ReadyTalkMeetingMember__c/fields/RT1__RegistrationNumberOfEmployees__c.field-meta.xml
<CustomField>
    <fullName>RT1__RegistrationNumberOfEmployees__c</fullName>
    <description>ReadyTalk Registration Number of Employees</description>
    <label>Number of Employees</label>
    <length>255</length>
    <type>Text</type>
</CustomField>