force-app/main/default/objects/RT1__ReadyTalkMeetingMember__c/fields/RT1__RegistrationPhone__c.field-meta.xml
<CustomField>
    <fullName>RT1__RegistrationPhone__c</fullName>
    <description>ReadyTalk Registration Phone</description>
    <label>Phone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>