force-app/main/default/objects/RT1__ReadyTalkMeetingMember__c/fields/RT1__RegistrationPurchasingTimeFrame__c.field-meta.xml
<CustomField>
    <fullName>RT1__RegistrationPurchasingTimeFrame__c</fullName>
    <description>ReadyTalk Registration Purchasing Time Frame</description>
    <label>Purchasing Time Frame</label>
    <length>255</length>
    <type>Text</type>
</CustomField>