force-app/main/default/objects/RT1__ReadyTalkMeetingMember__c/fields/RT1__RegistrationQuestion1__c.field-meta.xml
<CustomField>
    <fullName>RT1__RegistrationQuestion1__c</fullName>
    <description>ReadyTalk Custom Registration Question 1</description>
    <label>Custom Question 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>