force-app/main/default/objects/RT1__ReadyTalkMeetingMember__c/fields/RT1__RegistrationQuestion4__c.field-meta.xml
<CustomField>
    <fullName>RT1__RegistrationQuestion4__c</fullName>
    <description>ReadyTalk Custom Registration Question 4</description>
    <label>Custom Question 4</label>
    <length>255</length>
    <type>Text</type>
</CustomField>