force-app/main/default/objects/RT1__ReadyTalkMeetingMember__c/fields/RT1__RegistrationSurveyId__c.field-meta.xml
<CustomField>
    <fullName>RT1__RegistrationSurveyId__c</fullName>
    <label>Registration Survey Id</label>
    <length>25</length>
    <type>Text</type>
</CustomField>