force-app/main/default/objects/RT1__ReadyTalkMeetingMember__c/fields/RT1__RegistrationZip__c.field-meta.xml
<CustomField>
    <fullName>RT1__RegistrationZip__c</fullName>
    <description>ReadyTalk Registration Zip Code</description>
    <label>Zip Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>