force-app/main/default/objects/RT1__ReadyTalkMeetingMember__c/fields/RT1__Status__c.field-meta.xml
<CustomField>
    <fullName>RT1__Status__c</fullName>
    <description>ReadyTalk Meeting Member Status</description>
    <label>Meeting Member Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Invited</fullName>
            </value>
            <value>
                <fullName>Confirmed</fullName>
            </value>
            <value>
                <fullName>Declined</fullName>
            </value>
            <value>
                <fullName>Attended</fullName>
            </value>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>No-Show</fullName>
            </value>
            <value>
                <fullName>Email Failure: Opt-Out</fullName>
            </value>
            <value>
                <fullName>Email Failure: Address Error</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>