force-app/main/default/objects/RT1__ReadyTalkMeetingMember__c/fields/RT1__Unmatched__c.field-meta.xml
<CustomField>
    <fullName>RT1__Unmatched__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Unmatched</label>
    <type>Checkbox</type>
</CustomField>